tests/bad_programs/type_errors/return_int_add_bool.nc
int main() {
    return 1 + true;
}
